--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "dotenv": "^16.3.1",
-    "openzeppelin-solidity": "^4.8.1"
+    "openzeppelin-solidity": "^4.8.1",
+    "web3": "^4.1.1"
   }
 }
