config deploy and verify snowtrace network

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 PRIV_KEY="private key of wallet account"
-API_KEY="api_key of accoutn bscscan"#bscscan api key
+API_KEY="api_key of accoutn bscscan"#bscscan, eth scan api key
